--- a/AllenatoreAPI/appsettings.json
+++ b/AllenatoreAPI/appsettings.json
@@ -6,5 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "APIConfiguration": {
+    "APIVersion": "v1.0",
+    "APIName": "Allenatore API",
+    "Environment": "Test"
+  },
+
+  "ConnectionString": "Server=LAPTOP-UHPBI6SG\\SQLEXPRESS;Database=Allenatore;User Id=andre;Password=123Stella$;"
 }
