--- a/FrontEnd/ClientApp/angular.json
+++ b/FrontEnd/ClientApp/angular.json
@@ -23,9 +23,12 @@
             "assets": ["src/assets"],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/assets/css/main.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/main.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -71,7 +74,9 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
-            "styles": ["src/styles.css"],
+            "styles": [              
+              "src/styles.css"
+            ],
             "scripts": [],
             "assets": ["src/assets"]
           }
