--- a/FrontEnd/FrontEnd.csproj
+++ b/FrontEnd/FrontEnd.csproj
@@ -25,10 +25,18 @@
 
   <ItemGroup>
     <None Remove="ClientApp\src\app\sidebar\sidebar.component.ts" />
+    <None Remove="ClientApp\src\app\team\team.component.ts" />
+    <None Remove="ClientApp\src\models\resultData.ts" />
+    <None Remove="ClientApp\src\models\team.ts" />
+    <None Remove="ClientApp\src\services\team.service.ts" />
   </ItemGroup>
 
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\app\sidebar\sidebar.component.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\team\team.component.ts" />
+    <TypeScriptCompile Include="ClientApp\src\models\resultData.ts" />
+    <TypeScriptCompile Include="ClientApp\src\models\team.ts" />
+    <TypeScriptCompile Include="ClientApp\src\services\team.service.ts" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
