Aggiunta rosa dentro i dettagli della squadra

--- a/FrontEnd/FrontEnd.csproj
+++ b/FrontEnd/FrontEnd.csproj
@@ -26,16 +26,20 @@
   <ItemGroup>
     <None Remove="ClientApp\src\app\sidebar\sidebar.component.ts" />
     <None Remove="ClientApp\src\app\team\team.component.ts" />
+    <None Remove="ClientApp\src\models\player.ts" />
     <None Remove="ClientApp\src\models\resultData.ts" />
     <None Remove="ClientApp\src\models\team.ts" />
+    <None Remove="ClientApp\src\services\player.component.ts" />
     <None Remove="ClientApp\src\services\team.service.ts" />
   </ItemGroup>
 
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\app\sidebar\sidebar.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\team\team.component.ts" />
+    <TypeScriptCompile Include="ClientApp\src\models\player.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\resultData.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\team.ts" />
+    <TypeScriptCompile Include="ClientApp\src\services\player.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\services\team.service.ts" />
   </ItemGroup>
 
