aggiunto font-awesome aggiornata la stringa di connession e (aggiunta la mia)

--- a/AllenatoreAPI/appsettings.json
+++ b/AllenatoreAPI/appsettings.json
@@ -14,5 +14,8 @@
     "Environment": "Test"
   },
 
-  "ConnectionString": "Server=LAPTOP-UHPBI6SG\\SQLEXPRESS;Database=Allenatore;User Id=andre;Password=123Stella$;"
+  // andre
+  //"ConnectionString": "Server=LAPTOP-UHPBI6SG\\SQLEXPRESS;Database=Allenatore;User Id=andre;Password=123Stella$;"
+  // cicci
+  "ConnectionString": "Server=GELTRAVERSOA\\SQLEXPRESS17;Database=Allenatore;User Id=sa;Password=123Stella$;"
 }
