--- a/FrontEnd/ClientApp/angular.json
+++ b/FrontEnd/ClientApp/angular.json
@@ -22,6 +22,7 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": ["src/assets"],
             "styles": [
+              "node_modules/@fortawesome/fontawesome-free/css/all.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/assets/css/main.css",
               "src/styles.css"
