--- a/FrontEnd/FrontEnd.csproj
+++ b/FrontEnd/FrontEnd.csproj
@@ -30,9 +30,11 @@
     <None Remove="ClientApp\src\models\feet.ts" />
     <None Remove="ClientApp\src\models\player.ts" />
     <None Remove="ClientApp\src\models\resultData.ts" />
+    <None Remove="ClientApp\src\models\role.ts" />
     <None Remove="ClientApp\src\models\team.ts" />
     <None Remove="ClientApp\src\services\feet.service.ts" />
     <None Remove="ClientApp\src\services\player.service.ts" />
+    <None Remove="ClientApp\src\services\role.service.ts" />
     <None Remove="ClientApp\src\services\team.service.ts" />
   </ItemGroup>
 
@@ -43,9 +45,11 @@
     <TypeScriptCompile Include="ClientApp\src\models\feet.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\player.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\resultData.ts" />
+    <TypeScriptCompile Include="ClientApp\src\models\role.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\team.ts" />
     <TypeScriptCompile Include="ClientApp\src\services\feet.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\services\player.service.ts" />
+    <TypeScriptCompile Include="ClientApp\src\services\role.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\services\team.service.ts" />
   </ItemGroup>
 
