--- a/FrontEnd/FrontEnd.csproj
+++ b/FrontEnd/FrontEnd.csproj
@@ -29,6 +29,7 @@
     <None Remove="ClientApp\src\app\sidebar\sidebar.component.ts" />
     <None Remove="ClientApp\src\app\team\team.component.ts" />
     <None Remove="ClientApp\src\models\feet.ts" />
+    <None Remove="ClientApp\src\models\penalty.ts" />
     <None Remove="ClientApp\src\models\player.ts" />
     <None Remove="ClientApp\src\models\resultData.ts" />
     <None Remove="ClientApp\src\models\role.ts" />
@@ -45,6 +46,7 @@
     <TypeScriptCompile Include="ClientApp\src\app\sidebar\sidebar.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\team\team.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\feet.ts" />
+    <TypeScriptCompile Include="ClientApp\src\models\penalty.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\player.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\resultData.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\role.ts" />
