--- a/FrontEnd/FrontEnd.csproj
+++ b/FrontEnd/FrontEnd.csproj
@@ -29,12 +29,14 @@
     <None Remove="ClientApp\src\app\sidebar\sidebar.component.ts" />
     <None Remove="ClientApp\src\app\team\team.component.ts" />
     <None Remove="ClientApp\src\models\feet.ts" />
+    <None Remove="ClientApp\src\models\game.ts" />
     <None Remove="ClientApp\src\models\penalty.ts" />
     <None Remove="ClientApp\src\models\player.ts" />
     <None Remove="ClientApp\src\models\resultData.ts" />
     <None Remove="ClientApp\src\models\role.ts" />
     <None Remove="ClientApp\src\models\team.ts" />
     <None Remove="ClientApp\src\services\feet.service.ts" />
+    <None Remove="ClientApp\src\services\game.service.ts" />
     <None Remove="ClientApp\src\services\player.service.ts" />
     <None Remove="ClientApp\src\services\role.service.ts" />
     <None Remove="ClientApp\src\services\team.service.ts" />
@@ -46,12 +48,14 @@
     <TypeScriptCompile Include="ClientApp\src\app\sidebar\sidebar.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\team\team.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\feet.ts" />
+    <TypeScriptCompile Include="ClientApp\src\models\game.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\penalty.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\player.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\resultData.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\role.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\team.ts" />
     <TypeScriptCompile Include="ClientApp\src\services\feet.service.ts" />
+    <TypeScriptCompile Include="ClientApp\src\services\game.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\services\player.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\services\role.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\services\team.service.ts" />
