--- a/FrontEnd/FrontEnd.csproj
+++ b/FrontEnd/FrontEnd.csproj
@@ -43,6 +43,7 @@
     <None Remove="ClientApp\src\services\role.service.ts" />
     <None Remove="ClientApp\src\services\round.service.ts" />
     <None Remove="ClientApp\src\services\team.service.ts" />
+    <None Remove="ClientApp\src\utility\utility.ts" />
   </ItemGroup>
 
   <ItemGroup>
@@ -65,6 +66,7 @@
     <TypeScriptCompile Include="ClientApp\src\services\role.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\services\round.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\services\team.service.ts" />
+    <TypeScriptCompile Include="ClientApp\src\utility\utility.ts" />
   </ItemGroup>
 
   <ItemGroup>
