--- a/FrontEnd/FrontEnd.csproj
+++ b/FrontEnd/FrontEnd.csproj
@@ -29,6 +29,7 @@
     <None Remove="ClientApp\src\app\player\player.component.ts" />
     <None Remove="ClientApp\src\app\sidebar\sidebar.component.ts" />
     <None Remove="ClientApp\src\app\team\team.component.ts" />
+    <None Remove="ClientApp\src\app\transfers\transfers.component.ts" />
     <None Remove="ClientApp\src\models\feet.ts" />
     <None Remove="ClientApp\src\models\game.ts" />
     <None Remove="ClientApp\src\models\penalty.ts" />
@@ -38,12 +39,14 @@
     <None Remove="ClientApp\src\models\round.ts" />
     <None Remove="ClientApp\src\models\roundItem.ts" />
     <None Remove="ClientApp\src\models\team.ts" />
+    <None Remove="ClientApp\src\models\transfer.ts" />
     <None Remove="ClientApp\src\services\feet.service.ts" />
     <None Remove="ClientApp\src\services\game.service.ts" />
     <None Remove="ClientApp\src\services\player.service.ts" />
     <None Remove="ClientApp\src\services\role.service.ts" />
     <None Remove="ClientApp\src\services\round.service.ts" />
     <None Remove="ClientApp\src\services\team.service.ts" />
+    <None Remove="ClientApp\src\services\transferService.ts" />
     <None Remove="ClientApp\src\utility\utility.ts" />
   </ItemGroup>
 
@@ -53,6 +56,7 @@
     <TypeScriptCompile Include="ClientApp\src\app\player\player.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\sidebar\sidebar.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\team\team.component.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\transfers\transfers.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\feet.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\game.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\penalty.ts" />
@@ -62,12 +66,14 @@
     <TypeScriptCompile Include="ClientApp\src\models\round.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\roundItem.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\team.ts" />
+    <TypeScriptCompile Include="ClientApp\src\models\transfer.ts" />
     <TypeScriptCompile Include="ClientApp\src\services\feet.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\services\game.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\services\player.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\services\role.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\services\round.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\services\team.service.ts" />
+    <TypeScriptCompile Include="ClientApp\src\services\transferService.ts" />
     <TypeScriptCompile Include="ClientApp\src\utility\utility.ts" />
   </ItemGroup>
 
