Utility - Aggiunta utils per caricare le squadre da Excel

--- a/AllenatoreAPI/appsettings.json
+++ b/AllenatoreAPI/appsettings.json
@@ -14,5 +14,7 @@
     "Environment": "Test"
   },
 
-  "ConnectionString": "Server=LAPTOP-UHPBI6SG\\SQLEXPRESS;Database=Allenatore;User Id=andre;Password=123Stella$;"
+  "ConnectionString": "Server=LAPTOP-UHPBI6SG\\SQLEXPRESS;Database=Allenatore;User Id=andre;Password=123Stella$;",
+
+  "TeamFile": "C:\\Users\\AndreaBacigalupo\\Desktop\\team.xlsx"
 }
