--- a/AllenatoreAPI/AllenatoreAPI.csproj
+++ b/AllenatoreAPI/AllenatoreAPI.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EPPlus" Version="4.5.3.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.3.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.3.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.3.3" />
