--- a/FrontEnd/ClientApp/package.json
+++ b/FrontEnd/ClientApp/package.json
@@ -26,6 +26,7 @@
     "angular-font-awesome": "^3.1.2",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.9.3",
     "core-js": "^3.3.3",
     "jquery": "3.4.1",
     "oidc-client": "^1.9.1",
@@ -38,6 +39,7 @@
     "@angular/cli": "8.3.14",
     "@angular/compiler-cli": "8.2.12",
     "@angular/language-service": "8.2.12",
+    "@types/chart.js": "^2.9.20",
     "@types/jasmine": "~3.4.4",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "~12.11.6",
