--- a/AllenatoreAPI/appsettings.json
+++ b/AllenatoreAPI/appsettings.json
@@ -16,5 +16,6 @@
 
   "ConnectionString": "Server=LAPTOP-UHPBI6SG\\SQLEXPRESS;Database=Allenatore;User Id=andre;Password=123Stella$;",
 
-  "TeamFile": "C:\\Users\\AndreaBacigalupo\\Desktop\\team.xlsx"
+  "TeamFile": "C:\\Users\\AndreaBacigalupo\\Desktop\\Andre\\Progetti\\Allenatore_Import\\team.xlsx",
+  "TeamPlayers": "C:\\Users\\AndreaBacigalupo\\Desktop\\Andre\\Progetti\\Allenatore_Import"
 }
