--- a/AllenatoreAPI/appsettings.json
+++ b/AllenatoreAPI/appsettings.json
@@ -19,7 +19,7 @@
   // cicci
   "ConnectionString": "Server=GELTRAVERSOA\\SQLEXPRESS17;Database=Allenatore;User Id=sa;Password=123Stella$;",
 
-  "TeamFile": "C:\\Users\\AndreaBacigalupo\\Desktop\\Andre\\Progetti\\Allenatore_Import\\team.xlsx",
-  "TeamPlayers": "C:\\Users\\AndreaBacigalupo\\Desktop\\Andre\\Progetti\\Allenatore_Import",
-  "TeamRounds": "C:\\Users\\AndreaBacigalupo\\Desktop\\Andre\\Progetti\\Allenatore_Import\\Rounds.xlsx"
+  "TeamFile": "C:\\MIO\\LAVORI\\MySoftware\\Allenatore_Import\\team.xlsx",
+  "TeamPlayers": "C:\\MIO\\LAVORI\\MySoftware\\Allenatore_Import",
+  "TeamRounds": "C:\\MIO\\LAVORI\\MySoftware\\Allenatore_Import\\Rounds.xlsx"
 }
