Aggiunto metodo per importare le formazioni di una partita

--- a/AllenatoreAPI/appsettings.json
+++ b/AllenatoreAPI/appsettings.json
@@ -14,12 +14,15 @@
     "Environment": "Test"
   },
 
-  // andre
+  // Andre
   "ConnectionString": "Server=LAPTOP-UHPBI6SG\\SQLEXPRESS;Database=Allenatore;User Id=andre;Password=123Stella$;",
-  // cicci
-  //"ConnectionString": "Server=GELTRAVERSOA\\SQLEXPRESS17;Database=Allenatore;User Id=sa;Password=123Stella$;",
+  "TeamFile": "C:\\Users\\AndreaBacigalupo\\Desktop\\Andre\\Progetti\\Allenatore_Import\\team.xlsx",
+  "TeamPlayers": "C:\\Users\\AndreaBacigalupo\\Desktop\\Andre\\Progetti\\Allenatore_Import",
+  "TeamRounds": "C:\\Users\\AndreaBacigalupo\\Desktop\\Andre\\Progetti\\Allenatore_Import\\Rounds.xlsx"
 
-  "TeamFile": "C:\\MIO\\LAVORI\\MySoftware\\Allenatore_Import\\team.xlsx",
-  "TeamPlayers": "C:\\MIO\\LAVORI\\MySoftware\\Allenatore_Import",
-  "TeamRounds": "C:\\MIO\\LAVORI\\MySoftware\\Allenatore_Import\\Rounds.xlsx"
+  // Cicci
+  //"ConnectionString": "Server=GELTRAVERSOA\\SQLEXPRESS17;Database=Allenatore;User Id=sa;Password=123Stella$;",
+  //"TeamFile": "C:\\MIO\\LAVORI\\MySoftware\\Allenatore_Import\\team.xlsx",
+  //"TeamPlayers": "C:\\MIO\\LAVORI\\MySoftware\\Allenatore_Import",
+  //"TeamRounds": "C:\\MIO\\LAVORI\\MySoftware\\Allenatore_Import\\Rounds.xlsx"
 }
