Fix import excel formazioni

--- a/AllenatoreAPI/appsettings.json
+++ b/AllenatoreAPI/appsettings.json
@@ -16,13 +16,17 @@
 
   // Andre
   "ConnectionString": "Server=LAPTOP-UHPBI6SG\\SQLEXPRESS;Database=Allenatore;User Id=andre;Password=123Stella$;",
+
   "TeamFile": "C:\\Users\\AndreaBacigalupo\\Desktop\\Andre\\Progetti\\Allenatore_Import\\team.xlsx",
   "TeamPlayers": "C:\\Users\\AndreaBacigalupo\\Desktop\\Andre\\Progetti\\Allenatore_Import",
-  "TeamRounds": "C:\\Users\\AndreaBacigalupo\\Desktop\\Andre\\Progetti\\Allenatore_Import\\Rounds.xlsx"
+  "TeamRounds": "C:\\Users\\AndreaBacigalupo\\Desktop\\Andre\\Progetti\\Allenatore_Import\\Rounds.xlsx",
+  "Game": "C:\\Users\\AndreaBacigalupo\\Desktop\\Andre\\Progetti\\Allenatore_Import\\Game.xlsx"
 
   // Cicci
   //"ConnectionString": "Server=GELTRAVERSOA\\SQLEXPRESS17;Database=Allenatore;User Id=sa;Password=123Stella$;",
+
   //"TeamFile": "C:\\MIO\\LAVORI\\MySoftware\\Allenatore_Import\\team.xlsx",
   //"TeamPlayers": "C:\\MIO\\LAVORI\\MySoftware\\Allenatore_Import",
   //"TeamRounds": "C:\\MIO\\LAVORI\\MySoftware\\Allenatore_Import\\Rounds.xlsx"
+  //"Game": "C:\\MIO\\LAVORI\\MySoftware\\Allenatore_Import\\Game.xlsx"
 }
