Fix appSettings (II)

--- a/AllenatoreAPI/appsettings.json
+++ b/AllenatoreAPI/appsettings.json
@@ -27,6 +27,6 @@
 
   "TeamFile": "C:\\MIO\\LAVORI\\MySoftware\\Allenatore_Import\\team.xlsx",
   "TeamPlayers": "C:\\MIO\\LAVORI\\MySoftware\\Allenatore_Import",
-  "TeamRounds": "C:\\MIO\\LAVORI\\MySoftware\\Allenatore_Import\\Rounds.xlsx"
+  "TeamRounds": "C:\\MIO\\LAVORI\\MySoftware\\Allenatore_Import\\Rounds.xlsx",
   "Game": "C:\\MIO\\LAVORI\\MySoftware\\Allenatore_Import\\Game.xlsx"
 }
