--- a/AllenatoreAPI/appsettings.json
+++ b/AllenatoreAPI/appsettings.json
@@ -23,7 +23,7 @@
   //"Game": "C:\\Users\\AndreaBacigalupo\\Desktop\\Andre\\Progetti\\Allenatore_Import\\Game.xlsx",
 
   // cicci
-  "ConnectionString": "Server=GELTRAVERSOA\\SQLEXPRESS17;Database=Allenatore;User Id=sa;Password=123Stella$;"
+  "ConnectionString": "Server=GELTRAVERSOA\\SQLEXPRESS17;Database=Allenatore;User Id=sa;Password=123Stella$;",
 
   "TeamFile": "C:\\MIO\\LAVORI\\MySoftware\\Allenatore_Import\\team.xlsx",
   "TeamPlayers": "C:\\MIO\\LAVORI\\MySoftware\\Allenatore_Import",
