--- a/FrontEnd/FrontEnd.csproj
+++ b/FrontEnd/FrontEnd.csproj
@@ -30,6 +30,7 @@
     <None Remove="ClientApp\src\app\players\players.component.ts" />
     <None Remove="ClientApp\src\app\player\player.component.ts" />
     <None Remove="ClientApp\src\app\ranking\ranking.component.ts" />
+    <None Remove="ClientApp\src\app\scorer\scorer.component.ts" />
     <None Remove="ClientApp\src\app\sidebar\sidebar.component.ts" />
     <None Remove="ClientApp\src\app\team\team.component.ts" />
     <None Remove="ClientApp\src\app\transfers\transfers.component.ts" />
@@ -44,6 +45,7 @@
     <None Remove="ClientApp\src\models\role.ts" />
     <None Remove="ClientApp\src\models\round.ts" />
     <None Remove="ClientApp\src\models\roundItem.ts" />
+    <None Remove="ClientApp\src\models\scorer.ts" />
     <None Remove="ClientApp\src\models\team.ts" />
     <None Remove="ClientApp\src\models\teamStatistics.ts" />
     <None Remove="ClientApp\src\models\transfer.ts" />
@@ -54,6 +56,7 @@
     <None Remove="ClientApp\src\services\player.service.ts" />
     <None Remove="ClientApp\src\services\role.service.ts" />
     <None Remove="ClientApp\src\services\round.service.ts" />
+    <None Remove="ClientApp\src\services\scorer.service.ts" />
     <None Remove="ClientApp\src\services\team.service.ts" />
     <None Remove="ClientApp\src\services\transferService.ts" />
     <None Remove="ClientApp\src\utility\utility.ts" />
@@ -66,6 +69,7 @@
     <TypeScriptCompile Include="ClientApp\src\app\players\players.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\player\player.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\ranking\ranking.component.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\scorer\scorer.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\sidebar\sidebar.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\team\team.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\transfers\transfers.component.ts" />
@@ -80,6 +84,7 @@
     <TypeScriptCompile Include="ClientApp\src\models\role.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\round.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\roundItem.ts" />
+    <TypeScriptCompile Include="ClientApp\src\models\scorer.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\teamStatistics.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\team.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\transfer.ts" />
@@ -90,6 +95,7 @@
     <TypeScriptCompile Include="ClientApp\src\services\player.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\services\role.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\services\round.service.ts" />
+    <TypeScriptCompile Include="ClientApp\src\services\scorer.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\services\team.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\services\transferService.ts" />
     <TypeScriptCompile Include="ClientApp\src\utility\utility.ts" />
