Aggiunto metodo per salvare le info della partita

--- a/FrontEnd/FrontEnd.csproj
+++ b/FrontEnd/FrontEnd.csproj
@@ -37,6 +37,7 @@
     <None Remove="ClientApp\src\app\transfer\transfer.component.ts" />
     <None Remove="ClientApp\src\models\feet.ts" />
     <None Remove="ClientApp\src\models\game.ts" />
+    <None Remove="ClientApp\src\models\gameInfo.ts" />
     <None Remove="ClientApp\src\models\gamePlayer.ts" />
     <None Remove="ClientApp\src\models\penalty.ts" />
     <None Remove="ClientApp\src\models\player.ts" />
@@ -76,6 +77,7 @@
     <TypeScriptCompile Include="ClientApp\src\app\transfer\transfer.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\feet.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\game.ts" />
+    <TypeScriptCompile Include="ClientApp\src\models\gameInfo.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\gamePlayer.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\penalty.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\player.ts" />
