Fix visualizzazione squadre

--- a/AllenatoreAPI/appsettings.json
+++ b/AllenatoreAPI/appsettings.json
@@ -15,8 +15,8 @@
   },
 
   // andre
-  "ConnectionString": "Server=LAPTOP-UHPBI6SG\\SQLEXPRESS;Database=Allenatore;User Id=andre;Password=123Stella$;",
-  
+  "ConnectionString": "Server=LAPTOP-UHPBI6SG\\SQLEXPRESS;Database=Allenatore;User Id=andre;Password=6988EAE6;",
+
   "TeamFile": "C:\\Users\\AndreaBacigalupo\\Desktop\\Andre\\Progetti\\Allenatore_Import\\team.xlsx",
   "TeamPlayers": "C:\\Users\\AndreaBacigalupo\\Desktop\\Andre\\Progetti\\Allenatore_Import",
   "TeamRounds": "C:\\Users\\AndreaBacigalupo\\Desktop\\Andre\\Progetti\\Allenatore_Import\\Rounds.xlsx",
@@ -29,4 +29,7 @@
   //"TeamPlayers": "C:\\MIO\\LAVORI\\MySoftware\\Allenatore_Import",
   //"TeamRounds": "C:\\MIO\\LAVORI\\MySoftware\\Allenatore_Import\\Rounds.xlsx",
   //"Game": "C:\\MIO\\LAVORI\\MySoftware\\Allenatore_Import\\Game.xlsx"
+
+  // Togliere da appSettings
+  "category": 4
 }
