--- a/FrontEnd/FrontEnd.csproj
+++ b/FrontEnd/FrontEnd.csproj
@@ -35,6 +35,7 @@
     <None Remove="ClientApp\src\app\team\team.component.ts" />
     <None Remove="ClientApp\src\app\transfers\transfers.component.ts" />
     <None Remove="ClientApp\src\app\transfer\transfer.component.ts" />
+    <None Remove="ClientApp\src\models\category.ts" />
     <None Remove="ClientApp\src\models\feet.ts" />
     <None Remove="ClientApp\src\models\game.ts" />
     <None Remove="ClientApp\src\models\gameInfo.ts" />
@@ -51,6 +52,7 @@
     <None Remove="ClientApp\src\models\teamStatistics.ts" />
     <None Remove="ClientApp\src\models\transfer.ts" />
     <None Remove="ClientApp\src\models\userLogin.ts" />
+    <None Remove="ClientApp\src\services\category.service.ts" />
     <None Remove="ClientApp\src\services\feet.service.ts" />
     <None Remove="ClientApp\src\services\game.service.ts" />
     <None Remove="ClientApp\src\services\login.service.ts" />
@@ -75,6 +77,7 @@
     <TypeScriptCompile Include="ClientApp\src\app\team\team.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\transfers\transfers.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\transfer\transfer.component.ts" />
+    <TypeScriptCompile Include="ClientApp\src\models\category.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\feet.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\game.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\gameInfo.ts" />
@@ -91,6 +94,7 @@
     <TypeScriptCompile Include="ClientApp\src\models\team.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\transfer.ts" />
     <TypeScriptCompile Include="ClientApp\src\models\userLogin.ts" />
+    <TypeScriptCompile Include="ClientApp\src\services\category.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\services\feet.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\services\game.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\services\login.service.ts" />
